--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Color para navegadores moviles -->
     <meta name="theme-color" content="#C6D7CF">
 
-    <title>Cami ::: Mis 15 años</title>
+    <title>Anto ::: Mis 15 años</title>
 
     <!-- Listado de css con version dinamica segun modificacion de archivo -->
     <!-- <link rel='stylesheet' href='https://www.fixdate.io/modelo-invitacion/24/css/bootstrap.min.css?v=1632266531' /> -->
@@ -84,10 +84,10 @@
             <div class="row d-flex justify-content-center align-items-center">
                 <div class="content-portada text-center">
                     <div class="box-nombres-fecha-portada">
-                        <span class="fecha" style="color: #e1c4ff;text-shadow:1px  1px 0 #404040;">18-12-2023</span>
-                        <h1 style="opacity: 0.7; color: #e1c4ff;text-shadow:1px  1px 0 #404040;">Camila </h1> 
+                        <span class="fecha" style="color: #e1c4ff;text-shadow:1px  1px 0 #404040;">11-04-2024</span>
+                        <h1 style="opacity: 0.7; color: #e1c4ff;text-shadow:1px  1px 0 #404040;">Antonella</h1> 
                         <br>
-                        <h1 style="opacity: 0.7; color: #e1c4ff;text-shadow:1px  1px 0 #404040;"> Díaz </h1>
+                        <h1 style="opacity: 0.7; color: #e1c4ff;text-shadow:1px  1px 0 #404040;">Ramos</h1>
                         <div class="line"></div>
                     </div>
                     
@@ -187,25 +187,25 @@
 
                         <div class="info-box">
                             <h6><b>Día</b></h6>
-                            <p><b>Lunes 18 de diciembre - 19:00 hs</b></p>
+                            <p><b>Jueves 11 de Abril - 19:00 hs</b></p>
                             <a href="#" class="boton addeventatc">
                                 <span class="nameBtn atc_node notranslate">Agendar</span>
-                                <span class="start atc_node notranslate">2023-12-18 19:00:00</span>
-                                <span class="end atc_node notranslate">2023-12-18 20:00:00</span>
+                                <span class="start atc_node notranslate">2024-04-11 19:00:00</span>
+                                <span class="end atc_node notranslate">2024-04-11 20:00:00</span>
                                 <span class="timezone atc_node notranslate">America/Asuncion</span>
-                                <span class="title atc_node notranslate">15 años de Camila Díaz</span>
+                                <span class="title atc_node notranslate">15 años de Anto Ramos</span>
                             </a>
                         </div>
 
                         <div class="info-box">
                             <h6><b>Lugar</b></h6>
-                            <p><b>Parroquia San Agustin y Santa Mónica</b></p>
+                            <p><b>Capilla Santa María y San Nicolas</b></p>
                             <br>
                         </div>
 
                         <div class="info-box">
                             <h6><b>Dirección</b></h6>
-                            <p><b>Loma Pyta, Ruta Transchaco Kilómetro 11 1/2</b></p>
+                            <p><b>Avda. Félix Bogado y 18 de Julio</b></p>
                             <a href="#" data-evento="Ceremonia" class="boton modal-como-llegar">¿Cómo llegar?</a>
                         </div>
 
@@ -225,25 +225,25 @@
 
                         <div class="info-box">
                             <h6><b>Día</b></h6>
-                            <p><b>Lunes 18 de diciembre - 20:30 hs</b></p>
+                            <p><b>Jueves 11 de Abril - 20:30 hs</b></p>
                             <a href="#" class="boton addeventatc">
                                 <span class="nameBtn">Agendar</span>
-                                <span class="start">2023-12-18 20:30:00</span>
-                                <span class="end">2023-12-19 02:00:00</span>
+                                <span class="start">2024-04-11 20:30:00</span>
+                                <span class="end">2024-04-12 02:00:00</span>
                                 <span class="timezone">America/Asuncion</span>
-                                <span class="title">15 años Camila Díaz</span>
+                                <span class="title">15 años de Anto Ramos</span>
                             </a>
                         </div>
 
                         <div class="info-box">
                             <h6><b>Lugar</b></h6>
-                            <p><b>La Cascada, Salón de Eventos</b></p>
+                            <p><b>Royal Eventos</b></p>
                             <a href="#" data-evento="Fiesta" class="boton confirmar-asistencia">Confirmar asistencia</a>
                         </div>
 
                         <div class="info-box">
                             <h6><b>Dirección</b></h6>
-                            <p><b>Zeballos Cue, Coronel Bóveda esq. Prof.Catalina Dominguez, Asunción </b></p>
+                            <p><b>Avda. Perón 3018 casi San Fernando</b></p>
                             <a href="#" data-evento="Fiesta" class="boton modal-como-llegar">¿Cómo llegar?</a>
                         </div>
 
@@ -406,13 +406,13 @@
                     </div>
                 </div>
 
-                <h2 style="color: white;">#15CamiDiaz</h2>
+                <h2 style="color: white;">#15AntoRamos</h2>
                 <div class="w-100">
                 </div>
 
                 <br>
 
-                <a target="_blank" href="https://www.instagram.com/explore/tags/15CamiDiaz/" class="boton mx-1 mb-1">Ver en Instagram</a>
+                <a target="_blank" href="https://www.instagram.com/explore/tags/15AntoRamos/" class="boton mx-1 mb-1">Ver en Instagram</a>
 
             </div>
         </div>
@@ -425,14 +425,14 @@
             <div class="row">
                 <div class="col-md-6 col-nombres-footer d-flex justify-content-center align-items-center">
                     <h4>
-                        15 años Camila Díaz
+                        15 años Anto Ramos
                     </h4>
                 </div>
 
                 <div class="col-md-6 col-acciones-footer d-flex justify-content-center align-items-center">
                     <ul>
                         <li>
-                            <a href="https://forms.gle/uwgYZYBLJrYTH9uW9" target="_blank" data-evento="Fiesta" class="confirmar-asistencia" style="text-shadow:1px  1px 0 #404040;"><b>Confirmar asistencia</b></a>
+                            <a href="https://forms.gle/F3BtADbS8x1YkzMC7" target="_blank" data-evento="Fiesta" class="confirmar-asistencia" style="text-shadow:1px  1px 0 #404040;"><b>Confirmar asistencia</b></a>
                         </li>
                     </ul>
 
@@ -486,7 +486,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <a href="https://forms.gle/8E9zA8x3YBr3PDYc9" target="_blank" class="boton">Abrir formulario</a>
+                    <a href="https://forms.gle/F3BtADbS8x1YkzMC7" target="_blank" class="boton">Abrir formulario</a>
                 </div>
             </div>
         </div>
@@ -514,7 +514,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <a target="_blank" href="https://forms.gle/8PdQFPyDYhhvJCi96" class="boton">Abrir formulario</a>
+                    <a target="_blank" href="https://forms.gle/SRaduNJC8E4N2YHx5" class="boton">Abrir formulario</a>
                 </div>
             </div>
         </div>
@@ -562,7 +562,7 @@
                 </div>
 
                 <div class="modal-body">
-                    <p>+ Favor confirmar asistencia para nuestra mejor organización</p>
+                    <p>+ Favor confirmar asistencia para mejor organización del evento</p>
                 </div>
 
                 <div class="modal-footer"></div>
@@ -646,13 +646,13 @@
         var langJsVariante = "es-PY";
 
         // Cuenta regresiva
-        var fechaCuentaRegresiva = "2023-12-18 19:00:00";
+        var fechaCuentaRegresiva = "2024-04-11 19:00:00";
 
         // Mapas 
-        var latitudCeremonia = -25.24405;
-        var longitudCeremonia = -57.54615;
-        var latitudFiesta = -25.23397;
-        var longitudFiesta = -57.573354;
+        var latitudCeremonia = -25.32416;
+        var longitudCeremonia = -57.62833;
+        var latitudFiesta = -25.33424;
+        var longitudFiesta = -57.63152;
     </script>
 
     <!-- Idioma por defecto js -->
@@ -1207,7 +1207,7 @@
     <!-- Cuenta regresiva -->
     <script>
         // Set the date we're counting down to
-        var countDownDate = new Date(2023,11,18,19).getTime(); // año, mes - 1, día
+        var countDownDate = new Date(2024,3,11,19).getTime(); // año, mes - 1, día
         //var countDownDate = new Date(fechaCuentaRegresiva).getTime();
         
         // Update the count down every 1 second
