Mejora texto instagram

--- a/index.html
+++ b/index.html
@@ -398,15 +398,15 @@
         <div class="container">
             <div class="row text-center d-flex justify-content-center align-items-center">
 
-                <h2 class="title">Comparto este día junto a vos</h2>
-                <p class="subtitle">Compartí tus fotos y videos de ese hermoso día</p>
+                <h2 class="title" style="color: #e1c4ff;text-shadow:2px  1px 0 #404040;">Comparto este día junto a vos</h2>
+                <p class="subtitle" style="color: #e1c4ff;text-shadow:2px  1px 0 #404040;">Compartí tus fotos y videos de ese hermoso día</p>
 
                 <div class="w-100">
                     <div class="anim-instagram">
                     </div>
                 </div>
 
-                <h2 style="color: white;">#15AntoRamos</h2>
+                <h2 style="color: #e1c4ff;text-shadow:2px  1px 0 #404040;">#15AntoRamos</h2>
                 <div class="w-100">
                 </div>
 
