--- a/index.html
+++ b/index.html
@@ -399,20 +399,20 @@
             <div class="row text-center d-flex justify-content-center align-items-center">
 
                 <h2 class="title" style="color: #e1c4ff;text-shadow:2px  1px 0 #404040;">Comparto este día junto a vos</h2>
-                <p class="subtitle" style="color: #e1c4ff;text-shadow:2px  1px 0 #404040;">Compartí tus fotos y videos de ese hermoso día</p>
+                <!-- <p class="subtitle" style="color: #e1c4ff;text-shadow:2px  1px 0 #404040;">Compartí tus fotos y videos de ese hermoso día</p> -->
 
                 <div class="w-100">
                     <div class="anim-instagram">
                     </div>
                 </div>
 
-                <h2 style="color: #e1c4ff;text-shadow:2px  1px 0 #404040;">#15AntoRamos</h2>
+                <!-- <h2 style="color: #e1c4ff;text-shadow:2px  1px 0 #404040;">#15AntoRamos</h2> -->
                 <div class="w-100">
                 </div>
 
                 <br>
 
-                <a target="_blank" href="https://www.instagram.com/explore/tags/15AntoRamos/" class="boton mx-1 mb-1">Ver en Instagram</a>
+                <!-- <a target="_blank" href="https://www.instagram.com/explore/tags/15AntoRamos/" class="boton mx-1 mb-1">Ver en Instagram</a> -->
 
             </div>
         </div>
